[tool.poetry]
name = "ax-recommend-model"
version = "0.1.0"
description = ""
authors = ["mikeshinoda <53910940+desonglll@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
scikit-learn = "^1.5.2"
numpy = "^2.1.1"
pandas = "^2.2.3"
flask-cors = "^5.0.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
